# wattwise-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app_loaders.py  app_offers.py  app_sidebar.py  config.py  pipeline.py  pyproject.toml  streamlit_electricity_usage.py  wattwise.html
.github/workflows/: update-portfolio.yml
.streamlit/: config.toml
data/demo/: sample_electricity.csv
data/demo/processed/: cleaned_consumption.csv  cleaned_consumption_clustered.csv  cluster_rank_summary.csv  daily_stats.csv  daily_totals.csv  outliers_3sigma.csv  outliers_iqr.csv  weekly_hourly_stats.csv
data/demo/reports/: summary_report.md
data/demo/tables/: discount_scenarios.csv
docs/: kamaze_scraping_ai_prompt.md
electricity_consumption_analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: aggregation.py  clustering.py  discount_analysis.py  discount_calculator.py  features.py  israel_cities.py  loader.py  outlier_pipeline.py  outliers.py  preprocessing.py  reporting.py  scaling.py  scraper.py  text_parsers.py  visualization.py  weather_analysis.py
tabs/: __init__.py  about.py  behavior_components.py  behavior_profile.py  calculator.py  clustering.py  discounts.py  hourly.py  outlier_methods.py  overview.py  report.py  trends.py  weather.py
tests/: conftest.py  helpers.py  test_aggregation.py  test_basics.py  test_discount_analysis.py  test_discount_calculator.py  test_features.py  test_imports.py  test_loader.py  test_outliers.py  test_pipeline.py  test_preprocessing.py
