[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-user_streamlit_all_electricity-consumption-analysis"
version = "0.1.0"
description = "Household electricity consumption analyser & Savings Calculator for the Israeli electricity market"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "markdown>=3.4.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "streamlit>=1.45.1",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.13.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]